[package]
name = "gitpm"
description = "Git Profile Manager"
version = "0.1.0"
edition = "2021"
authors = ["Avdushin <avdushinbeaver1@gmail.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
